fix skills overlap

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1056,7 +1056,7 @@
 
   .label {
     display: inline;
-    font-size: 150%;
+    font-size: 125%;
     padding: .2em .6em .3em;
     color: #ffffff;
     text-align: center;
@@ -1065,6 +1065,7 @@
     border-radius: .25em;
     margin-right:. 3em;
     background-color: #337ab3
+    line-height: 2.2em;
   }
 
 /* Nav */
